fix deprecation, support for recent JDK